--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "QualifyingWorkNC": {
+    "QualifyingWork": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/QualifyingWorkNC",
+            "outputPath": "dist/QualifyingWork",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -68,10 +68,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "QualifyingWorkNC:build:production"
+              "browserTarget": "QualifyingWork:build:production"
             },
             "development": {
-              "browserTarget": "QualifyingWorkNC:build:development"
+              "browserTarget": "QualifyingWork:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -79,7 +79,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "QualifyingWorkNC:build"
+            "browserTarget": "QualifyingWork:build"
           }
         },
         "test": {
@@ -102,5 +102,5 @@
       }
     }
   },
-  "defaultProject": "QualifyingWorkNC"
+  "defaultProject": "QualifyingWork"
 }
