--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngrx/router-store": "^12.5.1",
     "@ngrx/store": "^12.5.1",
     "@ngrx/store-devtools": "^12.5.1",
+    "angularx-social-login": "^4.0.1",
     "moment": "^2.29.1",
     "ngx-spinner": "^12.0.0",
     "rxjs": "~6.6.0",
