--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "pre-commit": "pretty-quick --staged && ng lint",
-    "pre-push": "npm run test"
+    "pre-push": "npm run test",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
